# less-wrong

./: LICENSE  README.md  less-wrong.cabal
src/: Lib.hs
src/LessWrong/: Term.hs
src/LessWrong/COC/: Check.hs  Context.hs  Error.hs  Eval.hs  Parser.hs  Pretty.hs  Type.hs
src/LessWrong/HL/: Encoding.hs  Parser.hs  Type.hs
src/LessWrong/HL/Parser/: Type.hs
src/LessWrong/Term/: Parser.hs  Pretty.hs
src/LessWrong/Term/Internal/: Function.hs  Type.hs
test/: Spec.hs
