name:                less-wrong
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmactep/less-wrong#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev
maintainer:          pavel@yakovlev.me
copyright:           (c) 2017, Pavel Yakovlev
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       LessWrong.COC.Type
                     , LessWrong.COC.Context
                     , LessWrong.COC.Eval
                     , LessWrong.COC.Error
                     , LessWrong.COC.Check
                     , LessWrong.COC.Parser
                     , LessWrong.COC.Pretty
                     , LessWrong.HL.Type
                     , LessWrong.HL.Encoding
                     , LessWrong.HL.Parser
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers
                     , haskeline
                     , transformers
  default-language:    Haskell2010

executable lw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , less-wrong
  default-language:    Haskell2010

test-suite less-wrong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , less-wrong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/less-wrong
